src/FinancialForce Accounting/objects/codaPaymentAccountLineItem__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Summary of account values for payment.</description>
    <fields>
        <fullName>AccountSelected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PaymentAccountLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BelongToCurrentRefine__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Belong To Current Refine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Payment_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Payment Criteria</label>
        <referenceTo>codaVoidPaymentCriteria__c</referenceTo>
        <relationshipLabel>Payment Summaries</relationshipLabel>
        <relationshipName>Payment_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailModified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountTotal__c</fullName>
        <label>Discount Total</label>
        <summarizedField>codaPaymentLineItem__c.Discount__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentLineItem__c.TransactionSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentLineItem__c.PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscountWithAll__c</fullName>
        <label>Discount With All</label>
        <summarizedField>codaPaymentLineItem__c.Discount__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentLineItem__c.BelongToCurrentRefine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentLineItem__c.PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GrossValueTotal__c</fullName>
        <label>Gross Value Total</label>
        <summarizedField>codaPaymentLineItem__c.GrossValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentLineItem__c.TransactionSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentLineItem__c.PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrossValueWithAll__c</fullName>
        <label>Gross Value With All</label>
        <summarizedField>codaPaymentLineItem__c.GrossValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentLineItem__c.BelongToCurrentRefine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentLineItem__c.PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentValueTotal__c</fullName>
        <label>Payment Value Total</label>
        <summarizedField>codaPaymentLineItem__c.TransactionValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentLineItem__c.TransactionSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentLineItem__c.PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentValueWithAll__c</fullName>
        <label>Payment Value With All</label>
        <summarizedField>codaPaymentLineItem__c.TransactionValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentLineItem__c.BelongToCurrentRefine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentLineItem__c.PaymentSummary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <label>DEPRECATED: Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipName>PaymentAccountLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Account Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>